--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "native-base": "^2.3.8",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "remote-redux-devtools": "^0.5.12"
   }
 }
