--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "remote-redux-devtools": "^0.5.12"
+    "remote-redux-devtools": "^0.5.12",
+    "soap-everywhere": "^1.0.7"
   }
 }
