--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^2.3.8",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-dotenv": "^0.1.1",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
