--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.52.0",
     "react-native-datepicker": "^1.6.0",
     "react-native-dotenv": "^0.1.1",
+    "react-native-material-menu": "^0.2.5",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
