--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Time Attendance",
     "icon": "./resources/images/50years.png",
     "sdkVersion": "25.0.0",
-    "version": "1.0.2",
+    "version": "1.0.4",
     "splash": {
       "image": "./resources/images/splash50.png",
       "resizeMode": "cover"
@@ -12,6 +12,7 @@
       "bundleIdentifier": "com.psuphuket.timeattendance"
     },
     "android": {
+      "versionCode": 3,
       "package": "com.psuphuket.timeattendance"
     }
   }
