--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "expo": "^25.0.0",
+    "moment": "^2.21.0",
     "native-base": "^2.3.8",
     "react": "16.2.0",
     "react-native": "0.52.0",
