--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
-    "jest-expo": "25.0.0",
+    "react-native-scripts": "1.13.1",
+    "jest-expo": "^26.0.0",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,19 +20,19 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "expo": "^25.0.0",
+    "expo": "^26.0.0",
     "moment": "^2.21.0",
     "native-base": "^2.3.8",
-    "react": "16.2.0",
-    "react-native": "0.52.0",
+    "react": "16.3.0-alpha.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-datepicker": "^1.6.0",
     "react-native-dotenv": "^0.1.1",
     "react-native-qrcode": "^0.2.6",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
-    "remote-redux-devtools": "^0.5.12",
     "soap-everywhere": "^1.0.7"
   }
 }
